fixing font on mobile 👌

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="FrontEnd developer reactjs 🚀." />
@@ -30,7 +30,8 @@
         gap: 2rem;
       }
       h1 {
-        font-size: 3rem;
+        font-size: clamp(2rem, 3rem, 4rem);
+        text-align: center;
       }
       .links {
         display: flex;
