--- a/resume/index.html
+++ b/resume/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <object
-      data="./Mohamed-Kharashy-Frontenddev-Reactjs.pdf"
+      data="https://drive.google.com/viewerng/viewer?embedded=true&url=./Mohamed-Kharashy-Frontenddev-Reactjs.pdf"
       width="100%"
       height="100%"
     ></object>
