--- a/resume/index.html
+++ b/resume/index.html
@@ -38,9 +38,10 @@
   </head>
   <body>
     <object
-      data="https://drive.google.com/viewerng/viewer?embedded=true&url=./Mohamed-Kharashy-Frontenddev-Reactjs.pdf"
+      data="./Mohamed-Kharashy-Frontenddev-Reactjs.pdf"
       width="100%"
       height="100%"
+      type="application/pdf"
     ></object>
   </body>
 </html>
