--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <link rel="shortcut icon" type="image/jpg" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="FrontEnd developer reactjs 🚀." />
-    <title>FrontEnd developer reactjs 🚀</title>
+    
+  <!-- HTML Meta Tags -->
+  <title>Mohamed Kharashy | Frontend developer 🚀</title>
+  <meta name="description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://dev-mkr.me/resume">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Mohamed Kharashy | Frontend developer 🚀">
+  <meta property="og:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta property="og:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="dev-mkr.me">
+  <meta property="twitter:url" content="https://dev-mkr.me/resume">
+  <meta name="twitter:title" content="Mohamed Kharashy | Frontend developer 🚀">
+  <meta name="twitter:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta name="twitter:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
