--- a/resume/index.html
+++ b/resume/index.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mohamed Kharashy Resume</title>
-    <meta
-      name="description"
-      content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume"
-    />
-    <meta name="author" content="Mohamed Kharashy" />
-    <meta property="og:url" content="https://dev-mkr.me/resume" />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Mohamed Kharashy | Frontend developer 🚀"
-    />
-    <meta
-      property="og:description"
-      content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume"
-    />
-    <meta property="og:image" content="./assets/mkrlogoog.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+       
+  <!-- HTML Meta Tags -->
+  <title>Mohamed Kharashy | Frontend developer 🚀</title>
+  <meta name="description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://dev-mkr.me/resume">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Mohamed Kharashy | Frontend developer 🚀">
+  <meta property="og:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta property="og:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="dev-mkr.me">
+  <meta property="twitter:url" content="https://dev-mkr.me/resume">
+  <meta name="twitter:title" content="Mohamed Kharashy | Frontend developer 🚀">
+  <meta name="twitter:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta name="twitter:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+ 
     <link rel="shortcut icon" type="image/jpg" href="./assets/mkrLogo.png" />
     <style>
       html,
