--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     
   <!-- HTML Meta Tags -->
   <title>Mohamed Kharashy | Frontend developer 🚀</title>
-  <meta name="description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta name="description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development.">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://dev-mkr.me/resume">
+  <meta property="og:url" content="https://dev-mkr.me/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Mohamed Kharashy | Frontend developer 🚀">
-  <meta property="og:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta property="og:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development.">
   <meta property="og:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="dev-mkr.me">
-  <meta property="twitter:url" content="https://dev-mkr.me/resume">
+  <meta property="twitter:url" content="https://dev-mkr.me/">
   <meta name="twitter:title" content="Mohamed Kharashy | Frontend developer 🚀">
-  <meta name="twitter:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
+  <meta name="twitter:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development.">
   <meta name="twitter:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
