editing meta tags 👌

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
        
+ 
   <!-- HTML Meta Tags -->
   <title>Mohamed Kharashy | Frontend developer 🚀</title>
   <meta name="description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
@@ -14,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Mohamed Kharashy | Frontend developer 🚀">
   <meta property="og:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
-  <meta property="og:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+  <meta property="og:image" content="https://dev-mkr.me/assets/mkrlogoog.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -22,11 +23,12 @@
   <meta property="twitter:url" content="https://dev-mkr.me/resume">
   <meta name="twitter:title" content="Mohamed Kharashy | Frontend developer 🚀">
   <meta name="twitter:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
-  <meta name="twitter:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+  <meta name="twitter:image" content="https://dev-mkr.me/assets/mkrlogoog.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
  
-    <link rel="shortcut icon" type="image/jpg" href="./assets/mkrLogo.png" />
+    <link rel="shortcut icon" type="image/jpg" href="../assets/mkrLogo.png" />
     <style>
       html,
       body {
