--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/jpg" href="./favicon.png" />
+    <link rel="shortcut icon" type="image/jpg" href="./assets/mkrLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Mohamed Kharashy | Frontend developer 🚀">
   <meta property="og:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development.">
-  <meta property="og:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+  <meta property="og:image" content="https://dev-mkr.me/assets/mkrlogoog.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
   <meta property="twitter:url" content="https://dev-mkr.me/">
   <meta name="twitter:title" content="Mohamed Kharashy | Frontend developer 🚀">
   <meta name="twitter:description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development.">
-  <meta name="twitter:image" content="https://dev-mkr.me/resume/assets/mkrlogoog.png">
+  <meta name="twitter:image" content="https://dev-mkr.me/assets/mkrlogoog.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     
