--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
        
  
   <!-- HTML Meta Tags -->
-  <title>Mohamed Kharashy | Frontend developer 🚀</title>
+  <title>Mohamed Kharashy | Frontend developer 🚀 resume</title>
   <meta name="description" content="Frontend Developer ✨in love with @reactjs Coding addict, JavaScript enthusiast, UI lover. Writing technical stuff✍️ about Frontend development. this is my resume">
 
   <!-- Facebook Meta Tags -->
