--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             />
           </svg>
         </a>
+        <a href="https://dev-mkr.me/resume/" target="blank">resume</a>
       </div>
     </div>
   </body>
