--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       .links {
         display: flex;
         gap: 2rem;
+        align-items: center;
       }
       a {
         color: black;
