--- a/resume/index.html
+++ b/resume/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <object
-      data="./Mohamed-Kharashy-Frontenddev-Reactjs.pdf"
+      data="./**.pdf"
       width="100%"
       height="100%"
       type="application/pdf"
