--- a/resume/index.html
+++ b/resume/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <object
-      data="./Mohamed Kharashy junior front-end reactjs-nextjs.pdf"
+      data="./Mohamed-Kharashy-junior-frontend-reactjs-nextjs.pdf.pdf"
       width="100%"
       height="100%"
       type="application/pdf"
