--- a/resume/index.html
+++ b/resume/index.html
@@ -42,11 +42,10 @@
     </style>
   </head>
   <body>
-    <object
-      data="./*.pdf"
+      <iframe
+      src="https://drive.google.com/file/d/1Hn-BdB-bG5zzKkkg1oyDHvdzlnI4gy6j/preview"
       width="100%"
       height="100%"
-      type="application/pdf"
-    ></object>
+    ></iframe>
   </body>
 </html>
