--- a/resume/index.html
+++ b/resume/index.html
@@ -42,10 +42,7 @@
     </style>
   </head>
   <body>
-      <iframe
-      src="https://drive.google.com/file/d/1Hn-BdB-bG5zzKkkg1oyDHvdzlnI4gy6j/preview"
-      width="100%"
-      height="100%"
-    ></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTF182j6OxhTt10B81YNChCwe5t3AOGviG8GU-N0g8LFaa82ENMm34EwvToVg549s3ZAHz3kPd6_POJ/pub?embedded=true" width="100%"
+      height="100%"></iframe>
   </body>
 </html>
