--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,11 @@
     </style>
   </head>
   <body>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTF182j6OxhTt10B81YNChCwe5t3AOGviG8GU-N0g8LFaa82ENMm34EwvToVg549s3ZAHz3kPd6_POJ/pub?embedded=true" width="100%"
-      height="100%"></iframe>
+      <object
+      data="./Mohamed%20Kharashy%20junior%20frontend%20reactjs-nextjs.pdf"
+      width="100%"
+      height="100%"
+      type="application/pdf"
+    >
   </body>
 </html>
